[project]
name = "PyOpenAI"
version = "1.0.0"
authors = [
  { name="Ashish Agarwal", email="code.with.aasheesh@gmail.com" },
]
description = "Modern Python Package for modern AI responses"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"